force-app/main/default/objects/LLC_BI__Annual_Review__c/LLC_BI__Annual_Review__c.object-meta.xml
<CustomObject>
    <label>Risk Rating Review</label>
    <nameField>
        <displayFormat>RG-{0000000}</displayFormat>
        <label>Risk Rating Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Rating Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>