force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <description>This field is required. It is populated automatically when creating a risk rating review from the relationship and manually when creating from the loan. This field specifies the relationship associated with the annual review (risk rating review).</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risk Rating Review</relationshipLabel>
    <relationshipName>Annual_Review</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>