force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__AP_Stress_Index_actual__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__AP_Stress_Index_actual__c</fullName>
    <description>This field is currently not being used</description>
    <label>AP Stress Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>