force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Cash_Flow_Coverage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cash_Flow_Coverage__c</fullName>
    <description>This field is currently not being used</description>
    <formula>0.24 *  LLC_BI__Cash_Flow_Coverage_RG__c</formula>
    <label>Cash Flow Coverage - Wght</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>