force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Credit_Score__c</fullName>
    <description>This field is currently not being used</description>
    <formula>0.13 *  LLC_BI__Credit_Score_RG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Score - Wght</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>