force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Credit_Score_Year_3__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Credit_Score_Year_3__c</fullName>
    <description>This field is currently not being used</description>
    <label>Credit Score Year 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>