force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__DSC_Post_OC_Year_2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DSC_Post_OC_Year_2__c</fullName>
    <description>This field is currently not being used</description>
    <label>DSC Post OC Year 2</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>