force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Global_Cash_Flow_Wght__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Global_Cash_Flow_Wght__c</fullName>
    <description>This field is currently not being used</description>
    <formula>0.19 *  LLC_BI__Global_Cash_Flow_G2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Cash Flow - Wght</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>