force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Override__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Override__c</fullName>
    <description>This field is currently not being used</description>
    <label>Override</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>