force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Pers_Bus_Liquidity_RG__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pers_Bus_Liquidity_RG__c</fullName>
    <description>This field is currently not being used</description>
    <label>Pers. &amp; Bus. Liquidity (G)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>