force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Rev_Year_1__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rev_Year_1__c</fullName>
    <description>This field is currently not being used</description>
    <label>Rev Year 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>