force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Revenue_Growth__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Revenue_Growth__c</fullName>
    <description>This field is currently not being used</description>
    <formula>0.09 *  LLC_BI__Revenue_Growth_RG__c</formula>
    <label>Revenue Growth - Wght</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>