force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Revenue_Growth_RG__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Revenue_Growth_RG__c</fullName>
    <description>This field is currently not being used</description>
    <label>Revenue Growth (G)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>