force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>This field is optional. Depending on the environment, it can be manually populated or automatically populated via an approval process. This field is used to determine whether the risk grade worksheet (and thus the risk grade) is approved for use. The default values are: Not Approved, Approved, Declined, and In Review.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Approved</fullName>
                <default>true</default>
                <label>Not Approved</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>