force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/LLC_BI__Year_1st__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Year_1st__c</fullName>
    <defaultValue>YEAR(Today()) - 3</defaultValue>
    <description>This field is no longer used.</description>
    <label>Year 1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>