force-app/main/default/objects/LLC_BI__Annual_Review__c/fields/zen_Split_Loan_Classification__c.field-meta.xml
<CustomField>
    <fullName>zen_Split_Loan_Classification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Loan Classification</label>
    <type>Checkbox</type>
</CustomField>